# ocw-template

./: Cargo.toml  chain_spec.json
offchain-utils/: Cargo.toml
offchain-utils/src/: lib.rs
pallets/offchain-worker/: Cargo.toml
pallets/offchain-worker/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
