[package]
name = "offchain-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }
log = "0.4"
sp-runtime = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
serde_json = { version = "1.0.44", default-features = false, features = ["alloc", "arbitrary_precision"] }
serde = { version = "1.0.160", default-features = false, optional = true }

frame-benchmarking = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"serde/std",
]